use mmap directory as before